--- a/AFiley.csproj
+++ b/AFiley.csproj
@@ -26,4 +26,9 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Resources\Ico.ttf" />
+      <AvaloniaResource Include="Resources\Ico.ttf" />
+    </ItemGroup>
+
 </Project>
